--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,7 @@
-name: Node.js Build and Test Workflow
+name: Node.js CI
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,20 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # الخطوة 1: نسخ ملفات المشروع
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # الخطوة 2: إعداد Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # الخطوة 3: تثبيت التبعيات
       - name: Install Dependencies
         run: npm install
 
-      # الخطوة 4: تشغيل Grunt
-      - name: Run Grunt Tasks
+      - name: Run main.js
         run: node main.js
+        timeout-minutes: 15
+
+      - name: Cleanup Processes
+        run: pkill -f chrome || true
